<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a"
        android:id="@+id/enter_a"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/a"
        android:layout_below="@+id/enter_a"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/c"
        android:layout_alignEnd="@+id/c"
        android:inputType="number|numberDecimal|numberSigned" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_b"
        android:id="@+id/enter_b"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/a"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/b"
        android:layout_below="@+id/enter_b"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/solve_btn"
        android:layout_toLeftOf="@+id/solve_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_c"
        android:id="@+id/enter_c"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/b"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/c"
        android:layout_below="@+id/enter_c"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/equation"
        android:typeface="monospace"
        android:text="ax^2+bx+c=0"
        android:layout_below="@+id/c"
        android:layout_centerHorizontal="true"
        android:minHeight="30dp"
        android:paddingTop="5px" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve_btn"
        android:id="@+id/solve_btn"
        android:layout_toRightOf="@+id/a"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/equation"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/solved"
        android:id="@+id/solved"
        android:layout_below="@+id/equation"
        android:layout_alignLeft="@+id/enter_c"
        android:layout_alignStart="@+id/enter_c"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/roots"
        android:layout_below="@+id/solved"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="visible"
        android:paddingBottom="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_solution"
        android:id="@+id/show_sol"
        android:layout_below="@+id/roots"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:onClick="showSol"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_graph"
        android:id="@+id/show_graph"
        android:layout_below="@+id/show_sol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:onClick="showGr"
        android:visibility="invisible" />

</RelativeLayout>
