<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.timeshift.quadr_eq_solver.AboutMeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_coder"
        android:id="@+id/mainCoder"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/logo"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/t1meshift_link"
        android:id="@+id/t1meshift_link"
        android:layout_alignBottom="@+id/logo"
        android:layout_alignLeft="@+id/mainCoder" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/t1meshift_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
 />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_btn"
        android:id="@+id/return_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="closeAbout"/>

</RelativeLayout>
